# ALL-IN-ONE-ADVENTURE-COMPANION-WEARABLE

./: README.md
ESP32_SourceFiles/: tool_set_config.json
ESP32_SourceFiles/AllinOne_1v1/: sdkconfig  sdkconfig.old
ESP32_SourceFiles/AllinOne_1v1/main/: CMakeLists.txt  main.c
ESP32_SourceFiles/AllinOne_1v1/main/max30100/: max30100.c  max30100.h
ESP32_SourceFiles/AllinOne_1v1/main/max4466/: max4466.c  max4466.h
ESP32_SourceFiles/AllinOne_1v1/main/nRF24L01/: mirf.c  mirf.h  nRF24L01.h
ESP32_SourceFiles/AllinOne_1v1/main/neo6m/: neo6m.c
ESP32_SourceFiles/AllinOne_1v1/main/oled/: oled.c
ESP32_SourceFiles/AllinOne_1v2/: custom_partition.csv  sdkconfig  sdkconfig.old
ESP32_SourceFiles/AllinOne_1v2/main/: CMakeLists.txt  data_packet.h  idf_component.yml  main.c
ESP32_SourceFiles/AllinOne_1v2/main/nRF24L01/: nRF24L01.c
ESP32_SourceFiles/AllinOne_1v2/max30100/: max30100.h
ESP32_SourceFiles/AllinOne_1v2/max30100_test/: sdkconfig
ESP32_SourceFiles/AllinOne_1v2/max4466/: max4466.c  max4466.h
ESP32_SourceFiles/AllinOne_v1/: CMakeLists.txt  sdkconfig
ESP32_SourceFiles/AllinOne_v1/main/: CMakeLists.txt  main.c
ESP32_SourceFiles/GPS_test/: README.md
ESP32_SourceFiles/GPS_test/hello_world/: CMakeLists.txt
ESP32_SourceFiles/GPS_test/main/: main.c
ESP32_SourceFiles/oles_test/main/: CMakeLists.txt  main.c
Flutter_Application_SourceCodes/lib/: database_helper.dart  device_screen.dart  main.dart  map_page.dart  medical_records_page.dart
components/gps/: CMakeLists.txt  neo6m.c
components/gps/include/: neo6m.h
main/: CMakeLists.txt  main.c
(+9 files in other folders)
